# Ananke

./: .env.example  .gitignore  README.md  corpus.txt  corpus_phase1.txt  pyproject.toml  run.py
ananke/: __init__.py  activation.py  config.py  embedding.py  extraction.py  llm_client.py  logger.py  memory_store.py  migration.py  models.py  pipeline.py  promotion.py  reorganization.py
docs/: 00_THEORY.md  01_PROTOCOL_v1.md  01_PROTOCOL_v2.md  01_PROTOCOL_v3.md  02_IMPLEMENTATION.md  03_RESEARCH_LOG.md  EXPERIMENT_REPORT.md  Memory_Architecture_设计文档_MVP.md  RELEASE_v0.1.md  architecture.md
logs/: _phase3_compare.py  phase3_freq.jsonl  phase3_freq_report.html  phase3_persist.jsonl  phase3_persist_report.html  real_events_p1b.jsonl  threshold_sweep.json  trajectory_report.html
plan/: README.md  v0.2_consolidated_to_core.md  v0.3_world_evolution_phase3.md  v0.4_external_corpus_and_sweep.md  v0.5_long_term.md
tests/: test_scenarios.py
tools/: analyze_trajectory.py  dev_simulate.py  fetch_model.py  run_corpus.py  threshold_sweep.py
